<resources>
    <string name="app_name">ISEN Onboarding App</string>
    <string name="splash_screen">Onboarding App ISEN</string>
    <string name="home_welcome_text">Welcome\nto\nISEN\nLille !</string>
    <string name="home_profile_text">CHOOSE YOUR PROFILE :</string>
    <string name="topic_visit_title">VISIT</string>
    <string name="topic_information_title">INFORMATION</string>
    <string name="topic_administration_title">ADMINISTRATION</string>
    <string name="topic_network_title">NETWORK</string>
    <string name="topic_places_title">PLACES</string>
    <string name="topic_lunch_title">LUNCH</string>
    <string name="topic_market_title">MARKET</string>
    <string name="topic_entertainment_title">ENTERTAINMENT</string>
    <string name="topic_toilets_title">TOILETS</string>
    <string name="topic_feedback_title">FEEDBACK</string>
    <string name="home_student_button">STUDENT</string>
    <string name="home_teacher_button">TEACHER</string>
    <string name="topic_more_info_button">MORE INFORMATION</string>
    <string name="topic_next_button">NEXT</string>
    <string name="visit_text">Here you will find a simplified map for easily finding a room.</string>
    <string name="information_text">Here you will find some information to get to know ISEN better.</string>
    <string name="administration_text_student">Here, you will find all the places in ISEN linked to the administration
        as well as the office of the main managers.</string>
    <string name="administration_text_teacher">Here you will find all the administration offices
        as well as the various services that will be useful to you.</string>
    <string name="network_text">Here you will find all the important websites, used by students and teachers.</string>
    <string name="places_text">Here, you will find all the places that may be useful to you during your adventure at ISEN.</string>
    <string name="lunch_text">
You don\'t know where to eat? No problem, here we have grouped the favorite places where the ISENs usually eat.</string>
    <string name="market_text">Here you will find all the stores around ISEN, handy for where to shop!</string>
    <string name="entertainment_text">Here you will find all the important places related to student life at ISEN.</string>
    <string name="toilets_text">Need to go to the toilet? We have listed all the options available for you.</string>
    <string name="feedback_text">Do you have any suggestions for our app？ Ideas to help newcomers？
        Write them down and leave your information in order to communicate with us.</string>
    <string name="feedback_field_1_text">Name :</string>
    <string name="feedback_field_2_text">Last Name :</string>
    <string name="feedback_field_3_text">Situation :</string>
    <string name="feedback_field_4_text">Comment :</string>
    <string name="feedback_field_5_text">E-mail :</string>
    <string name="feedback_field_1_hint">Enter your name</string>
    <string name="feedback_field_2_hint">Enter your last name</string>
    <string name="feedback_field_3_btnRadio_text_1">Student</string>
    <string name="feedback_field_3_btnRadio_text_2">Teacher</string>
    <string name="feedback_field_4_hint">Enter your comment</string>
    <string name="feedback_field_5_hint">Enter your e-mail</string>
    <string-array name="toilets_loc_list">
        <item>B300</item>
        <item>A400</item>
        <item>A800</item>
        <item>B800</item>
        <item>A900</item>
        <item>B600</item>
        <item>C800</item>
        <item>C900</item>
    </string-array>
    <string-array name="toilets_name_list">
        <item>Atrium\'s Toilets</item>
        <item>Prepa\'s Toilets</item>
        <item>English Toilets</item>
        <item>Vauban\'s Toilets</item>
        <item>Far away Toilets</item>
        <item>Unknown Toilets</item>
        <item>Exam\'s Toilets</item>
        <item>TP\'s Toilets</item>
    </string-array>
    <string-array name="toilets_desc_list">
        <item>Passing toilets, useful if you pass by but very busy and often condemned.</item>
        <item>Quiet and clean toilets, they are always well maintained, it\'s THE best option.</item>
        <item>Small toilet but it feels in harmony near English classes, weak point: you are often disturbed.</item>
        <item>Relatively quiet toilets, with a view of Boulevard Vauban.</item>
        <item>Discreet toilets, it is difficult to access but it is a haven of peace and calm.</item>
        <item>Relatively narrow toilets, but they are simple and efficient.</item>
        <item>Indispensable toilets during DS / partial, they are little frequented and always in good condition.</item>
        <item>Clean toilets, but very busy during break times.</item>
    </string-array>
    <string-array name="places_name_list">
        <item>Co-Working</item>
        <item>FabLab</item>
        <item>BDE</item>
        <item>MI</item>
        <item>Library</item>
    </string-array>
    <string-array name="places_loc_list">
        <item>Atrium / A300 </item>
        <item>Adicode / A300</item>
        <item>Atrium / B300</item>
        <item>Sous sol / 100</item>
        <item>C800</item>
    </string-array>
    <string-array name="places_desc_list">
        <item>Perfect space for group work.</item>
        <item>This is the ISEN workshop, you can find soldering irons, 3D printers, or even electronic equipment.</item>
        <item>If you are looking for information about associations, student life or events at ISEN you should go here.</item>
        <item>If you are hungry or want a drink during the day, you should go here! They also serve sandwiches for lunch!</item>
        <item>If you want to work, read in peace or print documents this is the place to go.</item>
    </string-array>
    <string-array name="lunch_name_list">
        <item>Dog Sandwich</item>
        <item>MI</item>
        <item>Boîte à Dandwich</item>
        <item>Resto U</item>
        <item>Mian Dian</item>
        <item>Tigo</item>
    </string-array>
    <string-array name="lunch_loc_list">
        <item>43 Boulevard Vauban, 59800 Lille</item>
        <item>ISEN / B100</item>
        <item>45 Boulevard Vauban, 59800 Lille</item>
        <item>125 Rue Meurein, 59800 Lille</item>
        <item>113 Rue Meurein, 59800 Lille</item>
        <item>224 Bis Rue Nationale, 59800 Lille</item>
    </string-array>
    <string-array name="lunch_desc_list">
        <item>Sandwiches, the fastest if you don\'t have time.</item>
        <item>Sandwiches, Croqs Mr., hot dogs, the cheapest and nearest for lunch break.</item>
        <item>Sandwiches, Burgers, Fries, the most tasty if you are hungry.</item>
        <item>There are four differents restaurants : Pasta, Self, Friterie, Chicken.</item>
        <item>Traditional chinese foods, the most exoctic choice.</item>
        <item>Kebab, Tacos, Burgers, the simplest but effective.</item>
    </string-array>
    <string-array name="entertainment_name_list">
        <item>Le Point de Départ</item>
        <item>Le Zytho</item>
        <item>Le BDE</item>
        <item>Le BDS</item>
        <item>Apophisen</item>
    </string-array>
    <string-array name="entertainment_loc_list">
        <item>48 Rue Solférino, 59000 Lille</item>
        <item>ISEN / B100</item>
        <item>ISEN / B300</item>
        <item>ISEN / B900</item>
        <item>ISEN / B500</item>
    </string-array>
    <string-array name="entertainment_desc_list">
        <item>it\'s THE bar where all the ISENs meet and have a drink</item>
        <item>It\'s the ISEN bar, every Wednesday evening from 5.30pm to 7.30pm, you can taste a wide variety of beer (2€/bottle).</item>
        <item>It\'s the association that manages all student life within ISEN, it changes every year.</item>
        <item>It\'s the association that manages all ISEN\'s sporting activities and events.</item>
        <item>It\'s the association that manages all ISEN\'s e-sport events.</item>
    </string-array>
    <string name="admin_tab_1">Direction</string>
    <string name="admin_tab_2">Cycles</string>
    <string name="admin_tab_3">Domains</string>
    <string name="admin_tab_4">Useful</string>
    <string name="admin_name_1">M. OCCRE</string>
    <string name="admin_name_2">M. BOULINGUEZ</string>
    <string name="admin_name_3">M. DETAVERNIER</string>
    <string name="admin_name_4">M. CHENEVERT</string>
    <string name="admin_name_5">M. MORELLE</string>
    <string name="admin_name_6">M. MORELLE</string>
    <string name="admin_name_7">Mme. LITTON</string>
    <string name="admin_name_8">INCONNU</string>
    <string name="admin_name_9">M. DELANNOY</string>
    <string name="admin_name_10">Mme. KOKOSY</string>
    <string name="admin_name_11">M. MORELLE</string>
    <string name="admin_name_12">M. IHADDADENNE</string>
    <string name="admin_name_13">M. CAPRON</string>
    <string name="admin_name_14">M. GRANDIDIER</string>
    <string name="admin_name_15">M. WINDAL</string>
    <string name="admin_name_16">M. CHENEVERT</string>
    <string name="admin_name_17">Mme. GRUMMETZ</string>
    <string name="admin_name_18">Mme. GRUMMETZ</string>
    <string name="admin_name_19">Bureau des Etudes</string>
    <string name="admin_name_20">Mme. GRUMMETZ</string>
    <string name="admin_name_21">Mme. LITTON</string>
    <string name="admin_job_1">Directeur</string>
    <string name="admin_job_2">Directeur Campus</string>
    <string name="admin_job_3">Responsable CSI1/2</string>
    <string name="admin_job_4">Responsable CIR1/2</string>
    <string name="admin_job_5">Responsable CNB</string>
    <string name="admin_job_6">Responsable CSI3/CIR3</string>
    <string name="admin_job_7">Responsable M1</string>
    <string name="admin_job_8">Responsable M2</string>
    <string name="admin_job_9">Responsable Dev Logiciel et Jeux Vidéos</string>
    <string name="admin_job_10">Responsable Robotique Mobile</string>
    <string name="admin_job_11">Responsable Objets Connectés</string>
    <string name="admin_job_12">Responsable IA et RA</string>
    <string name="admin_job_13">Responsable Electroniques Embarquées</string>
    <string name="admin_job_14">Responsable Bio-nanotechs</string>
    <string name="admin_job_15">Responsable Big Data</string>
    <string name="admin_job_16">Responsable Cybersécurité</string>
    <string name="admin_job_17">Responsable Ingégnieur d\'affaires</string>
    <string name="admin_job_18">Responsable Informatiques et Finance</string>
    <string name="admin_job_19">Toute la paperasse</string>
    <string name="admin_job_20">Responsable FHES </string>
    <string name="admin_job_21">Responsable Internationale</string>
    <string name="admin_loc_1">SALLE</string>
    <string name="admin_loc_2">B300</string>
    <string name="admin_loc_3">A606</string>
    <string name="admin_loc_4">C664</string>
    <string name="admin_loc_5">C461</string>
    <string name="admin_loc_6">C461</string>
    <string name="admin_loc_7">C857</string>
    <string name="admin_loc_8">SALLE</string>
    <string name="admin_loc_9">C659</string>
    <string name="admin_loc_10">C668</string>
    <string name="admin_loc_11">C461</string>
    <string name="admin_loc_12">C660</string>
    <string name="admin_loc_13">C459</string>
    <string name="admin_loc_14">C662</string>
    <string name="admin_loc_15">C669</string>
    <string name="admin_loc_16">C664</string>
    <string name="admin_loc_17">A621</string>
    <string name="admin_loc_18">A622</string>
    <string name="admin_loc_19">B300</string>
    <string name="admin_loc_20">A600</string>
    <string name="admin_loc_21">A800</string>
</resources>